# cryptocurrency_trade

simple_trader/functions/reporter/: main.py  pyproject.toml
simple_trader/functions/trader/: main.py  pyproject.toml  requirements.txt
simple_trader/infra/: Makefile  backend.tf  main.tf  provider.tf  variables.tf
