[tool.poetry]
name = "trader"
version = "0.1.0"
description = ""
authors = ["1119-2916 <ti11192916@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
functions-framework = "^3.3.0"
requests = "^2.28.2"
datetime = "^5.1"
python-dateutil = "^2.8.2"
google-cloud-bigquery = "^3.9.0"
google-cloud-logging = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
